# rust-types-to-typescript-example

./: .gitignore  Cargo.toml  README.md
src/: main.rs
web/: .gitignore  generate_api_types.js  package.json  pnpm-lock.yaml
