[package]
name = "rust-types-to-typescript"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
schemars = { version="0.8.3", features=['chrono'] }
serde = { version="1.0.126", features=['derive'] }
serde_json = "1.0.64"
